manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: "phpinfo"
    labels:
        app: "phpinfo"
spec:
    ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    selector:
        app: "phpinfo"
