manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: "phpinfo"
    labels:
        app: "phpinfo"
    annotations:
        kubernetes.io/ingress.class: nginx

spec:
    rules:
    - http:
          paths:
          - path: /
            backend:
                service:
                    name: "phpinfo"
                    port:
                        number: 80
            pathType: Prefix
